wordpress-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:5.3-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
        # livenessProbe:
        #   httpGet:
        #     path: /wp-admin/install.php
        #     port: 80
        #   initialDelaySeconds: 20
        #   periodSeconds: 5
        # readinessProbe:
        #   httpGet:
        #     path: /wp-admin/install.php
        #     port: 80
        #   initialDelaySeconds: 15
        #   periodSeconds: 5
